* Support limit and offset to ModelSQL count search and search_count
* Add estimation count to ModelStorage
* Don't return cached preferences, try to enrich it with the transaction context
* Use UNION for 'Or'-ed domain with subqueries
* Add option to strip leading and trailing whitespace from fields.Char
* Allow column sql types to be tested from the table handler
* Combine search and get_keys in DictSchemaMixin
* Protect trusted devices against brute force attack
* Eager load Function field with same multiple getter

Version 5.6.3 - 2020-07-01
* Bug fixes (see mercurial logs for details)

Version 5.6.2 - 2020-06-16
* Bug fixes (see mercurial logs for details)

Version 5.6.1 - 2020-06-03
* Bug fixes (see mercurial logs for details)

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Call getter function when accessing Function field on unsaved record
* Add language configuration wizard
* Allow copying attachments and notes to created records
* Add link button on form
* Support explicit delete and remove for saving and on_change xxx2Many
* Add export_data_domain to ModelStorage
* Add route to export CSV data
* Add test on target of relation fields
* Add width and height attributes on calendar view
* Add default database name configuration
* Add retry option to report convert
* Add depends fields on view_attributes
* Simplify trigger action
* Run trigger in the queue
* Do not copy Binary content with file_id
* Replace memoize with functools.lru_cache
* Add support for Python 3.8
* Set all fields readonly for inactive record
* Enable check_access context when checking wizard access (issue9108)
* Add option to send test email with trytond-admin
* Add editable on calendar view
* Add xalign and yalign to group
* Add MultiSelection entry to Dict field
* Allow empty order clause
* Change editable tree attribute into boolean
* Send default order to clients
* Replace advisory lock by SKIP LOCKED in queue pulling