@@ -12,10 +12,12 @@ from weakref import WeakKeyDictionary
 
 try:
     from pysqlite2 import dbapi2 as sqlite
+    from pysqlite2.dbapi2 import DatabaseError
     from pysqlite2.dbapi2 import IntegrityError as DatabaseIntegrityError
     from pysqlite2.dbapi2 import OperationalError as DatabaseOperationalError
 except ImportError:
     import sqlite3 as sqlite
+    from sqlite3 import DatabaseError
     from sqlite3 import IntegrityError as DatabaseIntegrityError
     from sqlite3 import OperationalError as DatabaseOperationalError
 from sql import Flavor, Table, Query, Expression, Literal, Null
@@ -27,10 +29,16 @@ from trytond.backend.database import DatabaseInterface, SQLType
 from trytond.config import config
 from trytond.transaction import Transaction
 
-__all__ = ['Database', 'DatabaseIntegrityError', 'DatabaseOperationalError']
+
+__all__ = ['Database', 'DatabaseIntegrityError', 'DatabaseOperationalError',
+    'DatabaseTimeoutError']
 logger = logging.getLogger(__name__)
 
 _default_name = config.get('database', 'default_name', default=':memory:')
+
+
+class DatabaseTimeoutError(Exception):
+    pass
 
 
 class SQLiteExtract(Function):
@@ -399,7 +407,8 @@ class Database(DatabaseInterface):
         self._conn.execute('PRAGMA foreign_keys = ON')
         return self
 
-    def get_connection(self, autocommit=False, readonly=False):
+    def get_connection(
+            self, autocommit=False, readonly=False, statement_timeout=None):
         if self._conn is None:
             self.connect()
         if autocommit:
